<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transacao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransacaoActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="103dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:flow_verticalGap="40dp">

        <RadioButton
            android:id="@+id/rdPoupanca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conta_poupanca" />

        <RadioButton
            android:id="@+id/rdEspecial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conta_especial"
            tools:layout_editor_absoluteX="211dp"
            tools:layout_editor_absoluteY="103dp" />
    </RadioGroup>

    <EditText
        android:id="@+id/etValor"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etValor"
        app:layout_constraintStart_toStartOf="@+id/etValor" />

    <Button
        android:id="@+id/btnSacar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/sacar"
        app:layout_constraintStart_toStartOf="@+id/etValor"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <Button
        android:id="@+id/btnDepositar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="2dp"
        android:text="@string/depositar"
        app:layout_constraintEnd_toEndOf="@+id/etValor"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <TextView
        android:id="@+id/tvTextoSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/saldo"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvSaldo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="58dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvValor"
        app:layout_constraintStart_toEndOf="@+id/tvTextoSaldo" />

    <Button
        android:id="@+id/btnInvestimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="58dp"
        android:text="@string/investimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDepositar" />

    <TextView
        android:id="@+id/tvInvestimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnInvestimento" />
</androidx.constraintlayout.widget.ConstraintLayout>